# Ferro

./: .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_align_task_schema_with_spec.sql
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: engine.rs  mod.rs  protocol.rs  settings.rs  tasks.rs  torrent.rs  (+3 more)
src-tauri/tests/: commands_handlers.rs  commands_protocol.rs  commands_settings.rs  commands_tasks_bulk.rs  commands_tasks_reorder.rs  download_paths.rs  engine_aria2_client.rs  engine_aria2_client_errors.rs  engine_aria2_ftp.rs  engine_crash_recovery.rs  engine_manager.rs  engine_manager_btflags.rs  engine_manager_crash.rs  engine_manager_disk.rs  engine_manager_ports.rs  engine_session_recovery.rs  engine_state_machine.rs  magnet_metadata.rs  protocol_deeplink.rs  release_apply_command.rs  release_query_command.rs  retry_command.rs  retry_service.rs  service_db.rs  service_db_corruption.rs  service_engine_polling.rs  service_log_privacy.rs  service_logger_cleanup.rs  service_notifications.rs  service_settings_applier.rs  service_settings_store.rs  service_speed_aggregator.rs  service_task_repository.rs  service_torrent_settings.rs  service_torrent_storage.rs  service_trackers.rs  service_trackers_refresh.rs  state_models.rs  tasks_add.rs  tasks_delete.rs  (+1 more)
(+175 files in other folders)
