[package]
name = "ferro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ferro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
fs4 = "0.12"
base64 = "0.22"
url = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
trash = "5"

[dev-dependencies]
tempfile = "3"
